# GpuOps

./: pyproject.toml
gpuops/: main.py  security.py
gpuops/api/: auth.py  exceptions.py
gpuops/client/: generated_clientset.py  generated_user_client.py  generated_worker_client.py  worker_manager_clients.py
gpuops/cmd/: start.py
gpuops/codegen/: generate.py
gpuops/config/: __init__.py  config.py  registration.py
gpuops/detectors/: base.py  detector_factory.py
gpuops/detectors/runtime/: __init__.py
gpuops/envs/: __init__.py
gpuops/mixins/: __init__.py  active_record.py  timestamp.py
gpuops/routes/: routes.py  workers.py
gpuops/schemas/: __init__.py  clusters.py  common.py  config.py  models.py  users.py  workers.py
gpuops/server/: app.py  db.py  deps.py  init_db.py  server.py
gpuops/utils/: envs.py  network.py  platform.py  process.py  profiling.py  uuid.py
gpuops/worker/: collector.py  worker.py  worker_manager.py
