[project]
name = "gpuops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "fastapi>=0.135.3",
    "inflection>=0.5.1",
    "jinja2>=3.1.6",
    "psutil>=7.2.2",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "sqlmodel>=0.0.38",
    "tenacity>=9.1.4",
]
