[project]
name = "gpuops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "inflection>=0.5.1",
    "jinja2>=3.1.6",
    "psutil>=7.2.2",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "setproctitle>=1.3.7",
    "sqlmodel>=0.0.38",
    "tenacity>=9.1.4",
    "truststore>=0.10.4",
    "uvicorn>=0.44.0",
]

[project.scripts]
gpuops = "gpuops.main:main"

[build-system]
requires = ["hatchling<1.27"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-include = ["gpuops"]
artifacts = [
    "gpuops/ui",
    "gpuops/third_party"
]

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = true
force-exclude = '''
/(
    .*/migrations/.*
)/
'''
